[tool.poetry]
name = "matzbiim"
version = "0.1.0"
description = "A tool to ingest and normalize the New York State voter file."
authors = ["Émilia Decaudin"]
license = "Copyright (c) Émilia Decaudin"

[tool.poetry.dependencies]
python = "^3.12"
inquirer = "^3.3.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
types-tqdm = "^4.66.0.20240417"

[tool.mypy]
disallow_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
files = ["matzbiim", "tests"]

[[tool.mypy.overrides]]
module = "inquirer"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "RUF", "SLF", "UP", "W"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
